--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -11,9 +11,50 @@
 	
 }*/
 
+* {
+	font-family: 'Overpass Mono', monospace;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+body {
+	/*background-color: #f2f4f7;*/
+	padding: 1%;
+}
+
+.tile {
+	font-size: 2em;
+	transition: font-size .2s;
+	width: 19%;
+	height: 95%;
+	min-height: 70px;
+	min-width: 70px;
+	max-height: 300px;
+	max-width: 200px;
+	border-radius: 5px;
+	display: inline-block;
+	position: relative;
+	text-align: center;
+	margin: .5%
+
+}
+
+.tile-clicked {
+
+}
+
+.tile:hover {
+	font-size: 2.5em;
+
+}
+
 .total-score {
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 3em;
 	position: relative;
 	width: 35%;
 	text-align: center;
@@ -22,11 +63,18 @@
 }
 .total-score-transition {
 	display: inline-block;
-	font-size: 3em;
+	font-size: 6em;
 	position: relative;
 	width: 35%;
 	text-align: center;
 }
 
 table { table-layout:fixed; }
-td { overflow:hidden;white-space:nowrap;  } 
+td { 
+	overflow:hidden;
+	white-space:nowrap;
+}
+td:hover {
+	font-size: 2em;
+	overflow:visible;
+} 
