--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -105,7 +105,7 @@ body {
 	width: 35%;
 	text-align: center;
 	-webkit-transition: font-size 1s, color 1s;
-	transition: font-size 1s, color 1s;
+	transition: font-size .5s, color .5s;
 }
 .total-score-transition {
 	display: inline-block;
@@ -113,10 +113,14 @@ body {
 	position: relative;
 	width: 35%;
 	text-align: center;
+	-webkit-transition: font-size 1s, color 1s;
+	transition: font-size .5s, color .5s;
 }
 
 .total-score:hover {
 	font-size: 6em;
+	-webkit-transition: font-size 1s, color 1s;
+	transition: font-size .5s, color .5s;
 }
 
 table { table-layout:fixed; }
